--- a/NZWalks/NZWalks.API/appsettings.json
+++ b/NZWalks/NZWalks.API/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "NZWalksConnectionString": "Server=DESKTOP-IS526KS\\SQLSERVER19;Database=NZWalksDBGit;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
 }
